Remove command and token related code
